--- a/app.css
+++ b/app.css
@@ -70,14 +70,29 @@ span {
 
 #info-box {
     position: absolute;
-    right: 50%;
-    bottom: 0px;
-    height: 200px;
-    width: 600px;
+    top: 0px;
+    right: 0px;
+    width: 300px;
     background-color: #fff;
     display: none;
+    height: 100%;
     overflow: scroll;
 }
+
+#info-box__summary{
+    margin: 10px;
+}
+
+.info-box__categories-entry{
+    margin: 10px;
+    box-sizing: border-box;
+}
+
+progress{
+    width: 100%;
+    background-color: #fff
+}
+
 @media only screen and (max-width: 766px) {
     .sidebar {
         display: none;
