--- a/app.css
+++ b/app.css
@@ -73,7 +73,7 @@ span {
     top: 0px;
     right: 0px;
     width: 300px;
-    background-color: #fff;
+    background-color: #e9ebee;;
     display: none;
     height: 100%;
     overflow: scroll;
@@ -81,6 +81,9 @@ span {
 
 #info-box__summary{
     margin: 10px;
+    background: #fff;
+    border: 1px solid #bbbbbb;
+    padding: 5px
 }
 
 .info-box__categories-entry{
