--- a/app.css
+++ b/app.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    -webkit-appearance: none;
     }
 
 .wrapper{
@@ -41,6 +42,7 @@
 
 button{
     margin-top: 10px;
+    padding: 5px
 }
 
 span {
@@ -96,6 +98,10 @@ progress{
     background-color: #fff
 }
 
+input {
+    padding: 10px
+}
+
 @media only screen and (max-width: 766px) {
     .sidebar {
         display: none;
@@ -109,7 +115,6 @@ progress{
     }
 
     input{
-        height: 40px;
         width: 100%;
         margin-bottom: 5px;
     }
